<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".infoSessionPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/infosession"
        android:gravity="bottom"
        android:text="@string/information_session"
        android:textAlignment="center"
        android:textColor="@color/colorwhite"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFlower">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_session_content"/>

                <TextView
                    android:id="@+id/link_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_link"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
