<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onlineRegistrationPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/onlineapplication"
        android:gravity="bottom"
        android:text="@string/online_registration"
        android:textAlignment="center"
        android:textColor="@color/colorwhite"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlueJeans">

        <TextView
            android:id="@+id/link_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_link"
            android:textColor="@color/colorwhite"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlueJeans">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online_application_content"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
